# Axomae

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  .qmake.stash  Axomae.pro  CMakeLists.txt  LICENSE  Makefile  README.md  Session  Session.vim  TODOlist.txt  asan.supp  debug.zsh  gdb.sh  makefile  program  session  session3D  sobel  tsan.supp  ui_test.h  valgrind.sh
corelib/: CMakeLists.txt
corelib/cmake/: bin2c_wrapper.cmake  utils.cmake
corelib/common/: CMakeLists.txt  Factory.h  type_list.h
corelib/datastructure/: AbstractHierarchy.h
corelib/debug/: CMakeLists.txt  DebugGL.h
corelib/device/: CMakeLists.txt  DeviceBufferInterface.h  DeviceError.cpp  DeviceError.h  DeviceParams.h  DeviceTextureInterface.h  GPUBackendInterface.h  ShaderInterface.h  device_utils.h  kernel_launch_interface.h
corelib/geometry/: BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Object3D.cpp
corelib/internal/: CMakeLists.txt
corelib/macro/: CMakeLists.txt  class_macros.h  project_macros.h
corelib/memory/: CMakeLists.txt  MemoryArena.h  Mempool.cpp  Mempool.h  Tptr.cpp  Tptr.h  tag_ptr.h  tagutils.h
corelib/nova/: CMakeLists.txt  DrawEngine.cpp  DrawEngine.h  DrawEngine_GPU.cpp  NovaAPI.h  NovaInterface.h  api.h  api_camera.h  api_common.h  api_datastructures.h  api_engine.h  api_geometry.h  api_material.h  api_renderbuffer.h  api_renderoptions.h  api_scene.h  api_texture.h  api_transform.h  nova_gpu_utils.cpp  nova_gpu_utils.h
corelib/thread/: GenericLockInterface.h
sources/: .Controller.cpp.swp  .Data.cpp.swp  .EventHandler.cpp.swp  .ImageImporter.cpp.swp  .ImageManager.cpp.swp  .ImageManager.cpp.un~  .Model.cpp.swp  .TerminalOpt.cpp.un~  .View.cpp.swp  .Window.cpp.swp  .Window.cpp.un~  .main.cpp.swp  .main.cpp.un~  .makefile.swp  .makefile.un~  BoundingBox.cpp  CMakeLists.txt  Camera.cpp  CameraFrameBuffer.cpp  Config.cpp  Controller.cpp  Data.cpp  Drawable.cpp  EventHandler.cpp  FrameBufferInterface.cpp  GLBuffers.cpp  GLFrameBuffer.cpp  GLGeometryBuffer.cpp  GLMaterialViewer.cpp  GLRenderBuffer.cpp  GLViewer.cpp  GUIWindow.cpp  INodeDatabase.cpp  ImageImporter.cpp  ImageManager.cpp  ImageManager.cpp~  LightBuilder.cpp  LightControllerUI.cpp  LightingDatabase.cpp  LightingSystem.cpp  (+38 more)
sources/IO/: CMakeLists.txt  IO.pri  ImageImporter.cpp  ImageImporter.h  Loader.cpp  Loader.h  LoaderSharedExceptions.h  Loader_file.cpp  Loader_geometry.cpp  Loader_image.cpp  Loader_material.cpp  Loader_scene.cpp  Logger.cpp  Logger.h
sources/camera/: ArcballCamera.cpp  ArcballCamera.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraInterface.h  FreePerspectiveCamera.cpp  FreePerspectiveCamera.h  ICamera.h  camera.pri  math_camera.h
sources/cmd/: Cmd.cpp  CmdArgs.h  Syntax.cpp  Syntax.h  TerminalOpt.cpp  TerminalOpt.h  cmd.pri
sources/common/: CMakeLists.txt  Factory.h  GenericException.h  IAxObject.h  Math.h  Observer.h  UniformNames.h  Visitor.h  axomae_utils.h  common.pri  constants.h  math_utils.h
sources/config/: CMakeLists.txt  Config.cpp  Config.h  config.pri
sources/controller/: BakeRenderData.h  CMakeLists.txt  Controller_nova_bake.cpp  DisplayManager3D.cpp  DisplayManager3D.h  EnvmapController.h  ExceptionHandlerUI.cpp  ExceptionHandlerUI.h  GUIWindow.cpp  GUIWindow.h  GUIWindow_nova_bake.cpp  GUIWindow_slots.cpp  LightControllerUI.cpp  LightControllerUI.h  OP_ProgressStatus.cpp  OP_ProgressStatus.h  Operator.h  OperatorProgressStatus.cpp  OperatorProgressStatus.h  TextureViewerController.cpp  TextureViewerController.h  WorkspaceTracker.cpp  WorkspaceTracker.h  bake_render_data.h  constants.h  controller.pri
sources/database/: CMakeLists.txt  DatabaseInterface.h  DatabaseStorage.h  EnvmapTextureManager.cpp  EnvmapTextureManager.h  IBLCollection.h  INodeDatabase.cpp  INodeDatabase.h  ImageDatabase.h  LightingDatabase.cpp  LightingDatabase.h  QueryResult.h  RenderingDatabaseInterface.h  ResourceDatabaseManager.cpp  ResourceDatabaseManager.h  ShaderDatabase.cpp  ShaderDatabase.h  TextureDatabase.cpp  TextureDatabase.h  database.pri  database_utils.h
sources/datastructure/: AbstractHierarchy.cpp  CMakeLists.txt  HierarchyInterface.h  NodeInterface.h
sources/debug/: CMakeLists.txt  DebugGL.h  Logger.cpp  Logger.h  PerformanceLogger.h  debug.pri
sources/editor/: CMakeLists.txt  ContextMenuWidget.cpp  ContextMenuWidget.h  MaterialViewer.cpp  MaterialViewer.h  MeshListView.cpp  MessageBoxWidget.cpp  MessageBoxWidget.h  ProgressStatusWidget.cpp  ProgressStatusWidget.h  TextureViewerWidget.cpp  TextureViewerWidget.h  Window.cpp  Window.h  editor.pri
sources/geometry/: BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Object3D.cpp  Object3D.h  geometry.pri  utils_3D.h
sources/gpu/: CMakeLists.txt  CameraFrameBuffer.cpp  FrameBufferInterface.h  GLFrameBuffer.cpp  GLGeometryBuffer.h  GLRenderBuffer.h  RenderCubeMap.cpp  RenderQuad.cpp  gpu.pri
sources/gputils/: CMakeLists.txt
sources/macro/: Axomae_macros.h  CMakeLists.txt  class_macros.h  exception_macros.h  macro.pri
sources/main/: CMakeLists.txt  main.cpp  main.pri
sources/material/: CMakeLists.txt  Material.cpp  Material.h  MaterialInterface.h  material.pri
sources/mesh/: BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Mesh.cpp  Mesh.h  MeshInterface.h  MeshVisitor.h  mesh.pri
sources/nova/: CMakeLists.txt  DrawEngine.cpp  DrawEngine.h  Hitable.h  NovaInterface.h  Ray.cpp  Ray.h  nova.pri  nova_utils.h
sources/processing/: CMakeLists.txt  ImageManager.cpp  ImageManager.h  ImageManager_UV.cpp  OfflineCubemapProcessing.cpp  OfflineCubemapProcessing.h  TextureProcessing.cpp  TextureProcessing.h  image_utils.h  images.h  kernel_interface.h  processing.pri
sources/renderer/: CMakeLists.txt  Drawable.cpp  Drawable.h  LightingSystem.cpp  LightingSystem.h  NovaRenderer.cpp  NovaRenderer.h  NovaRenderer_bake.cpp  NovaRenderer_postprocess.cpp  NovaRenderer_scene.cpp  RenderPipeline.cpp  RenderPipeline.h  Renderer.cpp  Renderer.h  (+3 more)
tests/: BoundingBoxTest.cpp  CMakeLists.txt  DatabaseTest.cpp  OfflineCubemapProcessingTest.cpp  SceneHierarchyTest.cpp  Test.cpp  Test.h  response.hdr  test.pro  test2.hdr
(+1609 files in other folders)
