add_subdirectory(main)
add_subdirectory(renderer)
add_subdirectory(scene)
add_subdirectory(gpu)
add_subdirectory(camera)
add_subdirectory(common)
add_subdirectory(config)
add_subdirectory(controller)
add_subdirectory(database)
add_subdirectory(debug)
add_subdirectory(editor)
add_subdirectory(geometry)
add_subdirectory(IO)
add_subdirectory(macro)
add_subdirectory(material)
add_subdirectory(mesh)
add_subdirectory(nova)
add_subdirectory(processing)
add_subdirectory(texture)
add_subdirectory(thread)