add_subdirectory(main)
add_subdirectory(texture)
add_subdirectory(renderer)
add_subdirectory(scene)
add_subdirectory(gputils)
add_subdirectory(camera)
add_subdirectory(config)
add_subdirectory(controller)
add_subdirectory(database)
add_subdirectory(editor)
add_subdirectory(IO)
add_subdirectory(material)
add_subdirectory(mesh)
add_subdirectory(processing)
